--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "deploy": "gh-pages -d dist",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --coverage"
   },
   "dependencies": {
+    "jest": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
