--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "jest --coverage"
+    "test": "jest -c ./config/test/jest.js"
   },
   "dependencies": {
     "@babel/preset-react": "^7.22.3",
+    "@testing-library/jest-dom": "^5.16.5",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.22.4",
     "@commitlint/cli": "^17.6.3",
     "@commitlint/config-conventional": "^17.6.3",
     "@testing-library/react": "^14.0.0",
@@ -33,6 +36,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
     "husky": "^8.0.3",
+    "jsdom": "^22.1.0",
     "vite": "^4.3.9"
   }
 }
