--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jest-environment-jsdom": "^29.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.4",
