--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@babel/preset-react": "^7.22.3",
     "@testing-library/jest-dom": "^5.16.5",
+    "axios": "^1.4.0",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
